<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/introductionExplanationLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/introduction_explanation_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:baselineAligned="false"
        android:divider="@android:drawable/divider_horizontal_dim_dark"
        android:orientation="horizontal"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/introductionExplanationLabel">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fromPath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:text="@string/default_from_path" />

            <ScrollView
                android:id="@+id/fromScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/from_image_scroller">

                <LinearLayout
                    android:id="@+id/fromScrollViewLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@android:drawable/divider_horizontal_dim_dark"
                    android:orientation="vertical"
                    android:showDividers="middle"></LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/toPath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:text="@string/default_to_path" />

            <ScrollView
                android:id="@+id/toScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/to_image_scroller">

                <LinearLayout
                    android:id="@+id/toScrollViewLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@android:drawable/divider_horizontal_dim_dark"
                    android:orientation="vertical"
                    android:showDividers="middle" />
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>